--- a/src/Client/Rs317.Client.Unity.GladMMO/Rs317.Client.Unity.GladMMO.csproj
+++ b/src/Client/Rs317.Client.Unity.GladMMO/Rs317.Client.Unity.GladMMO.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Common.Logging" Version="3.4.1" />
     <PackageReference Include="GladNet3.Serializer.ProtobufNet" Version="3.0.48" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Threading.Channels" Version="4.7.0" />
   </ItemGroup>
 
